docs/resources/deployment-examples/example-k8s/anchor-platform-dev/reference-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anchor-platform-reference-server
  namespace: anchor-platform-dev
  labels:
    app: anchor-platform-reference-server
  annotations:
    fluxcd.io/automated: "true"
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anchor-platform-reference-server
  template:
    metadata:
      labels:
        app: anchor-platform-reference-server
    spec:
      containers:
      - name: reference-server
        image: docker-registry.services.stellar-ops.com/dev/anchor-platform:98e5ae9
        args: ["--anchor-reference-server"]
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        volumeMounts:
        - name: config-volume
          mountPath: /config
          readOnly: true
      volumes:
      - name: config-volume
        configMap:
          name: anchor-platform-reference-server-config
