docs/resources/deployment-examples/example-k8s/anchor-platform-dev/zookeeper-kafka-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zoo1
  namespace: anchor-platform-dev
  labels:
    app: zookeeper-1
spec:
  ports:
    - name: client
      port: 2181
      protocol: TCP
    - name: follower
      port: 2888
      protocol: TCP
    - name: leader
      port: 3888
      protocol: TCP
  selector:
    app: zookeeper-1
---
apiVersion: v1
kind: Service
metadata:
  name: anchor-platform-kafka
  namespace: anchor-platform-dev
  labels:
    name: kafka
spec:
  ports:
    - port: 9092
      name: kafka-port
      protocol: TCP
  selector:
    app: kafka-broker0
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: zookeeper-deployment-1
  namespace: anchor-platform-dev
spec:
  selector:
      matchLabels:
        app: zookeeper-1
  template:
    metadata:
      labels:
        app: zookeeper-1
    spec:
      containers:
        - name: zoo1
          image: digitalwonderland/zookeeper
          ports:
            - containerPort: 2181
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka-broker0
  namespace: anchor-platform-dev
spec:
  selector:
      matchLabels:
        app: kafka-broker0
  template:
    metadata:
      labels:
        app: kafka-broker0
    spec:
      containers:
        - name: kafka
          image: wurstmeister/kafka
          ports:
            - containerPort: 9092
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 250m
              memory: 2Gi
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka-cat
  namespace: anchor-platform-dev
spec:
  selector:
      matchLabels:
        app: kafka-cat
  template:
    metadata:
      labels:
        app: kafka-cat
    spec:
      containers:
        - name: kafka-cat
          image: confluentinc/cp-kafkacat
          command: ["/bin/sh"]
          args: ["-c", "trap : TERM INT; sleep infinity & wait"]
