docs/resources/deployment-examples/example-k8s/anchor-platform-dev/sep-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anchor-platform-sep-server
  namespace: anchor-platform-dev
  annotations:
    kubernetes.io/ingress.class: "public"
    cert-manager.io/cluster-issuer: "default"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/browser-xss-filter: "true"
    ingress.kubernetes.io/frame-deny: "true"
    ingress.kubernetes.io/content-type-nosniff: "true"
    ingress.kubernetes.io/hsts-max-age: "31536000"
    ingress.kubernetes.io/hsts-include-subdomains: "true"

spec:
  tls:
  - secretName: anchor-platform-sep-server-cert
    hosts:
    - anchor-sep-server-dev.stellar.org
  rules:
  - host: anchor-sep-server-dev.stellar.org
    http:
      paths:
        - backend:
            service:
              name: anchor-platform-sep-server
              port:
                number: 8080
          path: /
          pathType: Exact
